# catnap-notes

./: LICENSE  README.md  asset-manifest.json  docker-compose.yml  index.html
backend/: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  sqlx-data.json
backend/migrations/: 1_init.sql
backend/src/: container.rs  lib.rs  main.rs
backend/src/handler/: auth.rs  note.rs
backend/src/model/: error.rs  mod.rs  note.rs  result.rs  user.rs
backend/src/repository/: mod.rs  note_repo.rs  user_repo.rs
backend/src/service/: mod.rs  note_service.rs  user_service.rs
frontend/: .env  Dockerfile  README.md  asset-manifest.json  config.env  index.html  package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/api/: api.tsx
frontend/src/assets/icons/: Delete.tsx  Logout.tsx
frontend/src/components/Auth/: Auth.scss  Auth.tsx
frontend/src/components/BaseComponent/: BaseComponent.scss  BaseComponent.tsx
frontend/src/components/NoteDialog/: NoteDialog.scss  NoteDialog.tsx
frontend/src/components/SavedNote/: SavedNote.scss  SavedNote.tsx
frontend/src/pages/: Auth.tsx  Home.tsx  Info.tsx
frontend/src/store/: store.ts
frontend/src/types/: initialState.ts  note.ts
frontend/src/utils/: crypto.ts
frontend/static/css/: main.7a9d3738.css.map
frontend/static/js/: main.7f7c007b.js
static/css/: main.1e7d4d82.css  main.1e7d4d82.css.map  main.5d1b8d07.css  main.5d1b8d07.css.map  main.7a9d3738.css
static/js/: main.7046290b.js  main.7046290b.js.map  main.7f7c007b.js.map
(+16 files in other folders)
