[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
async-trait = "0.1.67"
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = "1.0.157"
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "postgres", "uuid"] }
